src/host/pantilt_in_ada/specs/libusb_1_0_libusb_h.ads

--
--  Copyright (c) 2015, John Leimon <jleimon@gmail.com>
--
--  Permission to use, copy, modify, and/or distribute this software for any
--  purpose with or without fee is hereby granted, provided that the above copyright
--  notice and this permission notice appear in all copies.
--
--  THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES WITH REGARD
--  TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS. IN
--  NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT, INDIRECT, OR
--  CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR
--  PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION,
--  ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
--

pragma Ada_2005;
pragma Style_Checks (Off);

with Interfaces.C; use Interfaces.C;
with stdint_h;
with Interfaces.C.Strings;
with System;
with stdio_h;
limited with x86_64_linux_gnu_bits_time_h;

package libusb_1_0_libusb_h is

   --  unsupported macro: LIBUSB_DEPRECATED_FOR(f) __attribute__((deprecated("Use " #f " instead")))
   --  unsupported macro: LIBUSBX_API_VERSION 0x01000102
   --  unsupported macro: libusb_le16_to_cpu libusb_cpu_to_le16
   --  unsupported macro: LIBUSB_DT_DEVICE_SIZE 18
   --  unsupported macro: LIBUSB_DT_CONFIG_SIZE 9
   --  unsupported macro: LIBUSB_DT_INTERFACE_SIZE 9
   --  unsupported macro: LIBUSB_DT_ENDPOINT_SIZE 7
   --  unsupported macro: LIBUSB_DT_ENDPOINT_AUDIO_SIZE 9
   --  unsupported macro: LIBUSB_DT_HUB_NONVAR_SIZE 7
   --  unsupported macro: LIBUSB_DT_SS_ENDPOINT_COMPANION_SIZE 6
   --  unsupported macro: LIBUSB_DT_BOS_SIZE 5
   --  unsupported macro: LIBUSB_DT_DEVICE_CAPABILITY_SIZE 3
   --  unsupported macro: LIBUSB_BT_USB_2_0_EXTENSION_SIZE 7
   --  unsupported macro: LIBUSB_BT_SS_USB_DEVICE_CAPABILITY_SIZE 10
   --  unsupported macro: LIBUSB_BT_CONTAINER_ID_SIZE 20
   --  unsupported macro: LIBUSB_DT_BOS_MAX_SIZE ((LIBUSB_DT_BOS_SIZE) + (LIBUSB_BT_USB_2_0_EXTENSION_SIZE) + (LIBUSB_BT_SS_USB_DEVICE_CAPABILITY_SIZE) + (LIBUSB_BT_CONTAINER_ID_SIZE))
   --  unsupported macro: LIBUSB_ENDPOINT_ADDRESS_MASK 0x0f
   --  unsupported macro: LIBUSB_ENDPOINT_DIR_MASK 0x80
   --  unsupported macro: LIBUSB_TRANSFER_TYPE_MASK 0x03
   --  unsupported macro: LIBUSB_ISO_SYNC_TYPE_MASK 0x0C
   --  unsupported macro: LIBUSB_ISO_USAGE_TYPE_MASK 0x30
   --  unsupported macro: LIBUSB_CONTROL_SETUP_SIZE (sizeof(struct libusb_control_setup))
   --  unsupported macro: LIBUSB_ERROR_COUNT 14
   --  unsupported macro: LIBUSB_HOTPLUG_MATCH_ANY -1
   function libusb_cpu_to_le16 (x : stdint_h.uint16_t) return stdint_h.uint16_t;  -- /usr/include/libusb-1.0/libusb.h:161
   pragma Import (C, libusb_cpu_to_le16, "libusb_cpu_to_le16");

   subtype libusb_class_code is unsigned;
   LIBUSB_CLASS_PER_INTERFACE : constant libusb_class_code := 0;
   LIBUSB_CLASS_AUDIO : constant libusb_class_code := 1;
   LIBUSB_CLASS_COMM : constant libusb_class_code := 2;
   LIBUSB_CLASS_HID : constant libusb_class_code := 3;
   LIBUSB_CLASS_PHYSICAL : constant libusb_class_code := 5;
   LIBUSB_CLASS_PRINTER : constant libusb_class_code := 7;
   LIBUSB_CLASS_PTP : constant libusb_class_code := 6;
   LIBUSB_CLASS_IMAGE : constant libusb_class_code := 6;
   LIBUSB_CLASS_MASS_STORAGE : constant libusb_class_code := 8;
   LIBUSB_CLASS_HUB : constant libusb_class_code := 9;
   LIBUSB_CLASS_DATA : constant libusb_class_code := 10;
   LIBUSB_CLASS_SMART_CARD : constant libusb_class_code := 11;
   LIBUSB_CLASS_CONTENT_SECURITY : constant libusb_class_code := 13;
   LIBUSB_CLASS_VIDEO : constant libusb_class_code := 14;
   LIBUSB_CLASS_PERSONAL_HEALTHCARE : constant libusb_class_code := 15;
   LIBUSB_CLASS_DIAGNOSTIC_DEVICE : constant libusb_class_code := 220;
   LIBUSB_CLASS_WIRELESS : constant libusb_class_code := 224;
   LIBUSB_CLASS_APPLICATION : constant libusb_class_code := 254;
   LIBUSB_CLASS_VENDOR_SPEC : constant libusb_class_code := 255;  -- /usr/include/libusb-1.0/libusb.h:186

   subtype libusb_descriptor_type is unsigned;
   LIBUSB_DT_DEVICE : constant libusb_descriptor_type := 1;
   LIBUSB_DT_CONFIG : constant libusb_descriptor_type := 2;
   LIBUSB_DT_STRING : constant libusb_descriptor_type := 3;
   LIBUSB_DT_INTERFACE : constant libusb_descriptor_type := 4;
   LIBUSB_DT_ENDPOINT : constant libusb_descriptor_type := 5;
   LIBUSB_DT_BOS : constant libusb_descriptor_type := 15;
   LIBUSB_DT_DEVICE_CAPABILITY : constant libusb_descriptor_type := 16;
   LIBUSB_DT_HID : constant libusb_descriptor_type := 33;
   LIBUSB_DT_REPORT : constant libusb_descriptor_type := 34;
   LIBUSB_DT_PHYSICAL : constant libusb_descriptor_type := 35;
   LIBUSB_DT_HUB : constant libusb_descriptor_type := 41;
   LIBUSB_DT_SUPERSPEED_HUB : constant libusb_descriptor_type := 42;
   LIBUSB_DT_SS_ENDPOINT_COMPANION : constant libusb_descriptor_type := 48;  -- /usr/include/libusb-1.0/libusb.h:248

   subtype libusb_endpoint_direction is unsigned;
   LIBUSB_ENDPOINT_IN : constant libusb_endpoint_direction := 128;
   LIBUSB_ENDPOINT_OUT : constant libusb_endpoint_direction := 0;  -- /usr/include/libusb-1.0/libusb.h:318

   type libusb_transfer_type is 
     (LIBUSB_TRANSFER_TYPE_CONTROL,
      LIBUSB_TRANSFER_TYPE_ISOCHRONOUS,
      LIBUSB_TRANSFER_TYPE_BULK,
      LIBUSB_TRANSFER_TYPE_INTERRUPT);
   pragma Convention (C, libusb_transfer_type);  -- /usr/include/libusb-1.0/libusb.h:332

   subtype libusb_standard_request is unsigned;
   LIBUSB_REQUEST_GET_STATUS : constant libusb_standard_request := 0;
   LIBUSB_REQUEST_CLEAR_FEATURE : constant libusb_standard_request := 1;
   LIBUSB_REQUEST_SET_FEATURE : constant libusb_standard_request := 3;
   LIBUSB_REQUEST_SET_ADDRESS : constant libusb_standard_request := 5;
   LIBUSB_REQUEST_GET_DESCRIPTOR : constant libusb_standard_request := 6;
   LIBUSB_REQUEST_SET_DESCRIPTOR : constant libusb_standard_request := 7;
   LIBUSB_REQUEST_GET_CONFIGURATION : constant libusb_standard_request := 8;
   LIBUSB_REQUEST_SET_CONFIGURATION : constant libusb_standard_request := 9;
   LIBUSB_REQUEST_GET_INTERFACE : constant libusb_standard_request := 10;
   LIBUSB_REQUEST_SET_INTERFACE : constant libusb_standard_request := 11;
   LIBUSB_REQUEST_SYNCH_FRAME : constant libusb_standard_request := 12;
   LIBUSB_REQUEST_SET_SEL : constant libusb_standard_request := 48;
   LIBUSB_SET_ISOCH_DELAY : constant libusb_standard_request := 49;  -- /usr/include/libusb-1.0/libusb.h:348

   subtype libusb_request_type is unsigned;
   LIBUSB_REQUEST_TYPE_STANDARD : constant libusb_request_type := 0;
   LIBUSB_REQUEST_TYPE_CLASS : constant libusb_request_type := 32;
   LIBUSB_REQUEST_TYPE_VENDOR : constant libusb_request_type := 64;
   LIBUSB_REQUEST_TYPE_RESERVED : constant libusb_request_type := 96;  -- /usr/include/libusb-1.0/libusb.h:398

   type libusb_request_recipient is 
     (LIBUSB_RECIPIENT_DEVICE,
      LIBUSB_RECIPIENT_INTERFACE,
      LIBUSB_RECIPIENT_ENDPOINT,
      LIBUSB_RECIPIENT_OTHER);
   pragma Convention (C, libusb_request_recipient);  -- /usr/include/libusb-1.0/libusb.h:416

   type libusb_iso_sync_type is 
     (LIBUSB_ISO_SYNC_TYPE_NONE,
      LIBUSB_ISO_SYNC_TYPE_ASYNC,
      LIBUSB_ISO_SYNC_TYPE_ADAPTIVE,
      LIBUSB_ISO_SYNC_TYPE_SYNC);
   pragma Convention (C, libusb_iso_sync_type);  -- /usr/include/libusb-1.0/libusb.h:437

   type libusb_iso_usage_type is 
     (LIBUSB_ISO_USAGE_TYPE_DATA,
      LIBUSB_ISO_USAGE_TYPE_FEEDBACK,
      LIBUSB_ISO_USAGE_TYPE_IMPLICIT);
   pragma Convention (C, libusb_iso_usage_type);  -- /usr/include/libusb-1.0/libusb.h:458

   type libusb_device_descriptor is record
      bLength : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:476
      bDescriptorType : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:481
      bcdUSB : aliased stdint_h.uint16_t;  -- /usr/include/libusb-1.0/libusb.h:485
      bDeviceClass : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:488
      bDeviceSubClass : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:492
      bDeviceProtocol : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:496
      bMaxPacketSize0 : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:499
      idVendor : aliased stdint_h.uint16_t;  -- /usr/include/libusb-1.0/libusb.h:502
      idProduct : aliased stdint_h.uint16_t;  -- /usr/include/libusb-1.0/libusb.h:505
      bcdDevice : aliased stdint_h.uint16_t;  -- /usr/include/libusb-1.0/libusb.h:508
      iManufacturer : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:511
      iProduct : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:514
      iSerialNumber : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:517
      bNumConfigurations : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:520
   end record;
   pragma Convention (C_Pass_By_Copy, libusb_device_descriptor);  -- /usr/include/libusb-1.0/libusb.h:474

   type libusb_endpoint_descriptor is record
      bLength : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:530
      bDescriptorType : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:535
      bEndpointAddress : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:541
      bmAttributes : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:550
      wMaxPacketSize : aliased stdint_h.uint16_t;  -- /usr/include/libusb-1.0/libusb.h:553
      bInterval : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:556
      bRefresh : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:560
      bSynchAddress : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:563
      extra : access unsigned_char;  -- /usr/include/libusb-1.0/libusb.h:567
      extra_length : aliased int;  -- /usr/include/libusb-1.0/libusb.h:570
   end record;
   pragma Convention (C_Pass_By_Copy, libusb_endpoint_descriptor);  -- /usr/include/libusb-1.0/libusb.h:528

   type libusb_interface_descriptor is record
      bLength : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:580
      bDescriptorType : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:585
      bInterfaceNumber : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:588
      bAlternateSetting : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:591
      bNumEndpoints : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:595
      bInterfaceClass : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:598
      bInterfaceSubClass : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:602
      bInterfaceProtocol : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:606
      iInterface : aliased stdint_h.uint8_t;  -- /usr/include/libusb-1.0/libusb.h:609
      endpoint : access constant libusb_endpoint_descriptor;  -- /usr/include/libusb-1.0/libusb.h:613
      extra : access unsigned_char;  -- /usr/include/libusb-1.0/libusb.h:617
      extra_length : aliased int;  -- /usr/include/libusb-1.0/libusb.h:620
   end record;
   pragma Convention (C_Pass_By_Copy, libusb_interface_descriptor);  -- /usr/include/libusb-1.0/libusb.h:578

   type libusb_interface is record
      altsetting : access constant libusb_interface_descriptor;  -- /usr/include/libusb-1.0/libusb.h:629
      num_altsetting : aliased int;  -- /usr/include/libusb-1.0/libusb.h:632
   end record;
   pragma Convention (C_Pass_By_Copy, libusb_interface);  -- /usr/include/libusb-1.0/libusb.h:626
